# BIGDATA-PROCESSING-AND-ANALYTICS_COURSE_2025

./: .gitignore  pyproject.toml
HW5/: create_unity_catalog.sql  mount_source_data.py
HW5/task_2_import_unification_consolidate/: processing_nyc_taxi_data.py
HW5/task_3_zone_summary/: zone_summary.py
HW5/task_4_trips_with_fares_over_30/: trips_with_fares_over_30.py
HW5/utils/: convert_df_schema_to_uc_table.py
HW7/: mount_source_data.py
HW7/task_2_import_unification_consolidate/: processing_nyc_taxi_data.py
HW7/task_3_zone_summary/: zone_summary.py
HW7/task_4_trips_with_fares_over_30/: trips_with_fares_over_30.py
HW7/utils/: check_is_databricks_env.py  convert_df_schema_to_uc_table.py
HW_11/: setup.sql  task1_storage_integration.sql  task2_data_loading.sql  task3_data_enrichment.sql  task4_data_transformation.sql  task5_time_travel.sql  task6_streams.sql  task7_tasks.sql  task8_procedures_cloning.sql
HW_13/: profile.example.yaml
HW_13/DB_COURSE_DBT_HW/: dbt_project.yml
HW_13/DB_COURSE_DBT_HW/macros/: age_group_filter.sql  limit_pg_resources.sql  player_role.sql  stage_utils.sql  surrogate_key.sql
HW_13/DB_COURSE_DBT_HW/models/marts/: exposures.yml  mart_player_profiles_female.sql  mart_player_profiles_male.sql  mart_team_dashboard.sql  schema.yml
HW_13/DB_COURSE_DBT_HW/models/staging/: schema.yml  sources.yml  stg_female_coaches.sql  stg_female_players.sql  stg_female_teams.sql  stg_male_coaches.sql  stg_male_players.sql  stg_male_teams.sql
HW_13/DB_COURSE_DBT_HW/scripts/: clear_csv.sh  install_cron.sh  make_10.sh  run_dbt_all.sh
HW_13/DB_COURSE_DBT_HW/seeds/: male_players_10000.csv  male_teams_10000.csv
HW_13/DB_COURSE_DBT_HW/tests/: player_id_globally_unique.sql  team_avg_overall_bounds.sql  wage_not_exceeds_value.sql
HW_16/: Makefile  docker-compose-kafka.yaml
HW_16/faker_generator/: fake_data_generator.py  generate_massages.py  generate_messages.py
HW_16/schemas/: transaction.json  user_activity.json
HW_16/spark_stream/: spark_structure_strim.py  spark_structure_striming.py
HW_3/: p_zhoholiev_hw3.md
HW_7/task_2_import_unification_consolidate/: processing_nyc_taxi_data.py
HW_7/task_3_zone_summary/: zone_summary.py
HW_7/task_4_trips_with_fares_over_30/: trips_with_fares_over_30.py
hw_3/: p_zhoholiev_hw3 _final.ipynb  p_zhoholiev_hw3.md
